# relxill

./: .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTE.md  Makefile  README.md  README.txt  common.h  cppModelDatabase.h  cppTypes.h  cpp_wrapper_xspec_lmodels.cpp  cppmodels.cpp  cppmodels.h  cppparameters.cpp  cppparameters.h  cppspectrum.h  cpptypes.h  create_wrapper_xspec.py  doxy.config  jenkins.csh  relbase.c  relbase.h  relcache.c  relcache.h  rellp.c  rellp.h  relmodels.c  relmodels.h  relphysics.c  relreturn.c  relreturn.h  relreturn_corona.c  relreturn_corona.h  relreturn_table.c  reltable.c  reltable.h  relutility.c  relutility.h  test_cpp.cpp  (+13 more)
modelfiles/: CHANGELOG.txt  README.txt  compile_relxill.csh
src/: .gitignore  CMakeLists.txt  IonGradient.cpp  IonGradient.h  LocalModel.cpp  LocalModel.h  ModelDatabase.h  ModelDefinition.cpp  ModelDefinition.h  ModelInfo.h  ModelParams.cpp  ModelParams.h  PrimarySource.cpp  PrimarySource.h  Relbase.cpp  Relbase.h  Relcache.cpp  Relcache.h  Rellp.cpp  Rellp.h  Relmodels.cpp  Relmodels.h  Relphysics.cpp  Relphysics.h  Relprofile.cpp  Relprofile.h  Relreturn_BlackBody.cpp  Relreturn_BlackBody.h  Relreturn_Corona.cpp  Relreturn_Corona.h  Relreturn_Datastruct.cpp  Relreturn_Datastruct.h  Relreturn_Table.cpp  Relreturn_Table.h  Relxill.cpp  Relxill.h  Xillspec.cpp  Xillspec.h  XspecSpectrum.h  common.h  (+46 more)
src/modelfiles/: compile_relxill.sh
test/: CMakeLists.txt  Makefile  build  check_model.sl  check_model_functions.sl  compare_model.sl  create_reference_data.sl  create_xillspec_ref.sl  create_xillspec_ref_single.sl  fits_model_struct.sl
test/e2e/: .gitignore  Makefile  build  check_model_functions.sl  create_reference_data.sl  create_xillspec_ref_single.sl  fits_model_struct.sl  load_model.sl  load_test_setup.sl  manual_tests.sl  subs_fitfunctions.sl  test_driver.sl  test_model_functionality.sl  test_refdata_relxill.sl  test_setup.sl
test/e2e/refdat/: refdat_xillverCO.fits  refdat_xillverCp.fits  refdat_xillverD.fits
test/e2e/refdata_localModels/: refdat_defparam_0002_relline_lp.fits
test/e2e/refdata_localModels/relline/: relline_defparam_refpar_0001.fits  relline_random_refdat_0002.fits  relline_random_refdat_0003.fits  relline_random_refdat_0004.fits  relline_random_refdat_0005.fits  relline_random_refdat_0006.fits
test/e2e/refdata_localModels/relline_lp/: relline_lp_random_refdat_0004.fits  relline_lp_random_refdat_0008.fits  relline_lp_random_refdat_0009.fits  relline_lp_random_refdat_0010.fits  relline_lp_random_refdat_0011.fits  relline_lp_random_refdat_0012.fits
test/e2e/refdata_localModels/relxill/: relxill_defparam_refdat_0001.fits  relxill_defparam_refdat_0013.fits  relxill_random_refdat_0002.fits  relxill_random_refdat_0003.fits  relxill_random_refdat_0004.fits  relxill_random_refdat_0005.fits  relxill_random_refdat_0006.fits  relxill_random_refdat_0014.fits  relxill_random_refdat_0015.fits  relxill_random_refdat_0016.fits  relxill_random_refdat_0017.fits  relxill_random_refdat_0018.fits
test/e2e/refdata_localModels/relxillCO/: relxillCO_defparam_refdat_0001.fits  (+5 more)
test/e2e/refdata_xillverTable/: refdat_xillverCO.fits  refdat_xillverNS.fits
test/e2e/test-scripts/: test_single_param.sl
test/e2e/tests/: load_test_setup.sl  refdata_xillverTable  template.sl  test_caching.sl  test_convolution_models.sl  test_density_models.sl  test_emissivity_powerlaw.sl  test_eval_model.sl  test_iongrad_models.sl  test_lineE_parameter.sl  test_lp_velocity.sl  test_lp_velocity_ecut_shift.sl  test_lp_velocity_primspec.sl  test_normalization.sl  test_nthcomp_model.sl  test_primary_continuum.sl  test_primary_continuum_normalization.sl  test_redshift_parameter.sl  test_refl_frac.sl  test_relline_physical_norm.sl  test_rrad_emis_profile.sl  test_rrad_implemented.sl  test_rrad_line.sl  test_xillver_table_implementation.sl  test_zcaching.sl
test/extendedLP/: check_extendedLP.sl
test/manual/: .gitignore  rebin_mean.sl
test/manual/extendedLP/: check_extendedLP.sl
test/manual/iongrad/: plot_gradient.sl  subs_evalmodel.sl  test_iongrad_numzones.sl
test/manual/parameter_plots/: relxill_plot_parameters.sl  subs_model_plots.sl
test/manual/primary_continuum_shift_source_to_disk/: plot_primary_continuum_shift_source_to_disk.sl
test/manual/returnrad/: masterTestDriver.sl  plotDifferentSpinValues.sl  plotModelParameterCombinations.sl  plot_2d_spec.sl  plot_rellinelpRet_spin.sl  plot_relxillBB_spec.sl  plot_relxilllpRet_spin.sl  testDiagnosePlots.sl  testEmisProfiles.sl  testEmisProfilesModel.sl  testRframeReturnradRefdata.sl  test_diskbb.sl  test_gshift_corr.sl
test/manual/xillverInterpolation/: subs.sl
test/manual/xillver_primary_spectrum/: load_model.sl  plot_spectra.sl
test/refdat/: refdat_xillver.fits  refdat_xillverCO.fits  refdat_xillverCp.fits  refdat_xillverD.fits  refdat_xillverNS.fits
test/refdata/: Makefile  create_reference_data.sl  create_xillspec_ref.sl  load_model.sl  subs_fitfunctions.sl  test_refdata_relxill.sl  test_setup.sl
test/refdata/refdata_xillverTable/: refdat_xillver.fits
test/returnrad/: build  testDiagnosePlots.sl  testEmisProfiles.sl  testXillverPrimaryNormalization.sl
test/returnrad/refdata/: refvalues-rrbbody.fits
test/scripts/: load_model.sl  subs_fitfunctions.sl  test_setup.sl
test/speed/: CMakeLists.txt  speed_test.cpp
test/unit/: CMakeLists.txt  common-functions.cpp  common-functions.h  run-tests.c  test-cppspectrum.cpp  test-rellp.cpp  test-relxill.cpp  test-stdfunctions.cpp  test-xilltab.cpp  test_rellp.c  test_rellp.h  test_relreturn.c  test_relreturn.h  test_relxill.c  test_relxill.h  test_std_functions.c  test_std_functions.h  test_xilltab.c  test_xilltab.h  tests-alpha-model.cpp  tests-bbody-returnrad.cpp  tests-bbody-returnrad.h  tests-caching.cpp  tests-execmodel.cpp  tests-iongrad.cpp  tests-returnrad.cpp  tests.cpp
test/unit/refvalues/: gr.sl  physical_disk_irradiation.sl  test-alpha-model.sl
test/unit/refvalues/gr/: disk.sl  kerr.sl  lamp_post.sl  returning_radiation.sl
test/xillverInterpolation/: xillverD.sl  xillverDCp.sl
(+239 files in other folders)
